--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -11,7 +11,9 @@ services:
     - seccomp:unconfined
   volumes:
     - ..:/workspace/zl
-
+    - ../../thirdlib/:/workspace/zl/thirdlib
+    - ../../video-sample/:/workspace/zl/video-sample
+    - ../../mdu/:/workspace/zl/mdu
 
   entrypoint:
     - /bin/sh
