--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -508,11 +508,11 @@ endif()
 if(ENABLE_WEBRTC)
   add_subdirectory(webrtc)
 endif()
-if(ENABLE_MDU)
-    add_subdirectory(${CMAKE_SOURCE_DIR}/mdu mdu)
+if(ENABLE_TDU)
+    add_subdirectory(${CMAKE_SOURCE_DIR}/thirdlib/mdu-rt-src/src mdu)
     set_property(TARGET mdu PROPERTY POSITION_INDEPENDENT_CODE ON)
     update_cached_list(MK_LINK_LIBRARIES mdu)
-    update_cached_list(MK_COMPILE_DEFINITIONS ENABLE_MDU)
+    update_cached_list(MK_COMPILE_DEFINITIONS ENABLE_TDU)
 endif()
 
 if(ENABLE_API)
